[tool.poetry]
name = "bedev-gh-api"
version = "0.1.0"
description = "Simple github API"
authors = ["Ruslan Iskov <ruslan.rv.ua@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.85.0"
uvicorn = "^0.18.3"
httpx = "^0.23.0"
python-dotenv = "^0.21.0"

[tool.poetry.dev-dependencies]
black = {version = "^22.8.0", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
